syntax = "proto3";


option go_package = "https://github.com/KeatonBrink/distrubuted-chessboard-generation/distributedchessboardgeneration";

package distributedchessboardgeneration;

service ChessboardTaskAssignment {
    rpc GetCb(Message) returns (ChessboardString) {}
}

// Note, the return is a message for no particular reason
service ChessboardReturnAssignmentURL{
    rpc ReturnCb(ReturnMessage) returns (Emptyy) {}
}

message ReturnMessage {
    string ip = 1;
    string fileName = 2;
}

message Emptyy{

}

// Message can be empty as the server always sends the next
// available task.  However, the caller will send the server
// for logging purposes and future potential "heart-beat" messages.
message Message {
    string ip = 1;
}

message ChessboardString {
    string board = 1;
    bool isFinished = 2;
}

